# layerlens

./: .gitignore  README.md  demo.md
.github/workflows/: dockerfile-check.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  productionstart.sh  requirements.txt  server.py  start.sh
apps/api/services/: ai_service.py  dive_service.py
apps/lint/: README.md  pyproject.toml
apps/lint/src/layerlens_lint/: __init__.py  categorize.py  cli.py  deep.py  diff.py  explain.py  github.py  rules.py  scanner.py
apps/lint/tests/: conftest.py  test_categorize.py  test_cli.py  test_deep.py  test_diff.py  test_explain.py  test_github.py  test_rules.py  test_scanner.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.js
apps/web/public/: index.html
apps/web/src/: App.jsx  App.test.jsx  index.css  index.js  theme.js
apps/web/src/api/: client.js
apps/web/src/components/: AuroraField.jsx  CountUp.jsx  Footer.jsx  MarkdownLite.jsx  ResultsPanel.jsx  ScanningScreen.jsx  TopNav.jsx  WasteChart.jsx
apps/web/src/components/Buttons/: GlowButton.jsx
apps/web/src/pages/: Console.jsx  Documentation.jsx  Landing.jsx  Lint.jsx
